--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
 install:
-  - pip install pytest
+  - pip install pytest pytest-cov
   - pip install docker
+  - pip install codecov
 script:
-  - py.test -vv
+  - py.test --cov=./ -vv
+  - codecov
