--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -o Dpkg::Options::="--force-confold" --force-yes -y docker-engine
 install:
+  - pip install git+https://github.com/jairojunior/ansible.git
   - pip install pytest pytest-cov
   - pip install docker
   - pip install codecov
